# Video-Codec-SDK-demo

./: CMakeLists.txt  README.md
include/: dec_enc.h  decode.h  encode.h
include/common/: AppDecUtils.h  AppEncUtils.h  AppEncUtilsD3D11.h
include/nvcodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
include/nvcodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderD3D11.cpp  NvEncoderD3D12.cpp  NvEncoderD3D9.cpp  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  NvEncoderOutputInVidMemD3D11.cpp  NvEncoderOutputInVidMemD3D11.h
include/utils/: BitDepth.cu  ColorSpace.cu  FFmpegDemuxer.h  FFmpegStreamer.h  NvCodecUtils.h  NvEncoderCLIOptions.h  Resize.cu  crc.cu
src/: demo.cpp
